--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     compile  "org.embulk:embulk-core:0.8.14"
     provided "org.embulk:embulk-core:0.8.14"
     testCompile "junit:junit:4.+"
+    testCompile "org.embulk:embulk-core:0.8.14:tests"
+    testCompile "org.embulk:embulk-standards:0.8.14"
 }
 
 task classpath(type: Copy, dependsOn: ["jar"]) {
