--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "java"
     id "checkstyle"
     id "findbugs"
+    id "jacoco"
 }
 import com.github.jrubygradle.JRubyExec
 repositories {
