Update NOTICE and NOTICE_GEM, and include them in Maven and RubyGems distributions

--- a/build.gradle
+++ b/build.gradle
@@ -69,14 +69,17 @@ embulkPlugin {
 
 jar {
     from rootProject.file("LICENSE")
+    from rootProject.file("NOTICE")
 }
 
 sourcesJar {
     from rootProject.file("LICENSE")
+    from rootProject.file("NOTICE")
 }
 
 javadocJar {
     from rootProject.file("LICENSE")
+    from rootProject.file("NOTICE")
 }
 
 publishing {
