--- a/build.gradle
+++ b/build.gradle
@@ -29,12 +29,12 @@ java {
 }
 
 dependencies {
-    compileOnly "org.embulk:embulk-api:0.10.31"
-    compileOnly "org.embulk:embulk-spi:0.10.31"
+    compileOnly "org.embulk:embulk-api:0.10.36"
+    compileOnly "org.embulk:embulk-spi:0.10.36"
 
-    compile("org.embulk:embulk-util-config:0.3.0") {
+    compile("org.embulk:embulk-util-config:0.3.1") {
         // They conflict with embulk-core. They are once excluded here,
-        // and added explicitly with versions exactly the same with embulk-core:0.10.31.
+        // and added explicitly with versions exactly the same with older embulk-core (until 0.10.31).
         exclude group: "com.fasterxml.jackson.core", module: "jackson-annotations"
         exclude group: "com.fasterxml.jackson.core", module: "jackson-core"
         exclude group: "com.fasterxml.jackson.core", module: "jackson-databind"
@@ -43,7 +43,7 @@ dependencies {
     }
 
     // They are once excluded from transitive dependencies of other dependencies,
-    // and added explicitly with versions exactly the same with embulk-core:0.10.31.
+    // and added explicitly with versions exactly the same with older embulk-core (until 0.10.31).
     compile "com.fasterxml.jackson.core:jackson-annotations:2.6.7"
     compile "com.fasterxml.jackson.core:jackson-core:2.6.7"
     compile "com.fasterxml.jackson.core:jackson-databind:2.6.7"
@@ -53,12 +53,11 @@ dependencies {
     compile "org.embulk:embulk-util-timestamp:0.2.1"
     compile "org.embulk:embulk-util-dynamic:0.1.0"
 
-    testCompile "junit:junit:4.13"
-    testCompile "org.embulk:embulk-junit4:0.10.31"
-    testCompile "org.embulk:embulk-core:0.10.31"
-    testCompile "org.embulk:embulk-core:0.10.31:tests"
-    testCompile "org.embulk:embulk-deps:0.10.31"
-    testCompile "org.embulk:embulk-input-file:0.10.31"
+    testCompile "junit:junit:4.13.2"
+    testCompile "org.embulk:embulk-junit4:0.10.36"
+    testCompile "org.embulk:embulk-core:0.10.36"
+    testCompile "org.embulk:embulk-deps:0.10.36"
+    testCompile "org.embulk:embulk-input-file:0.10.36"
 }
 
 embulkPlugin {
