Build with Gradle 7.5.1

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     compileOnly "org.embulk:embulk-api:0.10.36"
     compileOnly "org.embulk:embulk-spi:0.10.36"
 
-    compile("org.embulk:embulk-util-config:0.3.1") {
+    implementation("org.embulk:embulk-util-config:0.3.1") {
         // They conflict with embulk-core. They are once excluded here,
         // and added explicitly with versions exactly the same with older embulk-core (until 0.10.31).
         exclude group: "com.fasterxml.jackson.core", module: "jackson-annotations"
@@ -44,20 +44,20 @@ dependencies {
 
     // They are once excluded from transitive dependencies of other dependencies,
     // and added explicitly with versions exactly the same with older embulk-core (until 0.10.31).
-    compile "com.fasterxml.jackson.core:jackson-annotations:2.6.7"
-    compile "com.fasterxml.jackson.core:jackson-core:2.6.7"
-    compile "com.fasterxml.jackson.core:jackson-databind:2.6.7"
-    compile "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.6.7"
-    compile "javax.validation:validation-api:1.1.0.Final"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:2.6.7"
+    implementation "com.fasterxml.jackson.core:jackson-core:2.6.7"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.6.7"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.6.7"
+    implementation "javax.validation:validation-api:1.1.0.Final"
 
-    compile "org.embulk:embulk-util-timestamp:0.2.1"
-    compile "org.embulk:embulk-util-dynamic:0.1.1"
+    implementation "org.embulk:embulk-util-timestamp:0.2.1"
+    implementation "org.embulk:embulk-util-dynamic:0.1.1"
 
-    testCompile "junit:junit:4.13.2"
-    testCompile "org.embulk:embulk-junit4:0.10.36"
-    testCompile "org.embulk:embulk-core:0.10.36"
-    testCompile "org.embulk:embulk-deps:0.10.36"
-    testCompile "org.embulk:embulk-input-file:0.10.36"
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.embulk:embulk-junit4:0.10.36"
+    testImplementation "org.embulk:embulk-core:0.10.36"
+    testImplementation "org.embulk:embulk-deps:0.10.36"
+    testImplementation "org.embulk:embulk-input-file:0.10.36"
 }
 
 embulkPlugin {
