--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 }
 
 group = "org.embulk"
-version = "0.5.0-SNAPSHOT"
+version = "0.5.0"
 description = "Parses files encoded in MessagePack."
 
 tasks.withType(JavaCompile) {
