--- a/build.gradle
+++ b/build.gradle
@@ -50,8 +50,10 @@ dependencies {
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.6.7"
     implementation "javax.validation:validation-api:1.1.0.Final"
 
+    implementation "org.embulk:embulk-util-msgpack:0.8.24.1"
+
     implementation "org.embulk:embulk-util-timestamp:0.2.2"
-    implementation "org.embulk:embulk-util-dynamic:0.1.1"
+    implementation "org.embulk:embulk-util-dynamic:0.2.1"
 
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.slf4j:slf4j-simple:2.0.7"
