--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
         touch $HOME/.gem/credentials
         chmod 0600 $HOME/.gem/credentials
         printf -- "---\n:rubygems_api_key: ${RUBYGEMS_API_KEY}\n" > $HOME/.gem/credentials
-        ./gradlew --stacktrace publishMavenPublicationToMavenCentralRepository gemPush
+        ./gradlew --stacktrace :publishMavenPublicationToMavenCentralRepository embulk-guess-msgpack:publishMavenPublicationToMavenCentralRepository :gemPush embulk-guess-msgpack:gemPush
       env:
         ORG_GRADLE_PROJECT_ossrhUsername: ${{ vars.OSSRH_USERNAME }}
         ORG_GRADLE_PROJECT_ossrhPassword: ${{ secrets.OSSRH_PASSWORD }}
